--- a/index.html
+++ b/index.html
@@ -26,22 +26,31 @@
 
 <div class="main">
   <div class="mainCont">
-    <p class="mainText">ООО «РСК «АСК-Строй»</p>
+    <p class="mainTextHead">ООО «РСК «АСК-Строй»</p>
     <p class="mainText">выполняет полный комплекс работ нулевого цикла, реконструкции, реставрации и капитальному ремонту жилых, административных и производственных зданий и сооружений. Предоставляет широкий спектр инжиниринговых услуг по обследованию, проектированию и выполнению строительно-монтажных работ.</p>
-
   </div>
 </div>
 
-<table id="addText" width="auto" cellpadding="0" cellspacing="0">
-  <tr>
-    <td>Проектирование</td>
-    <td>Строительство</td>
-    <td>Обследование</td>
-  </tr>
-  <tr>
-    <td class="colTexts">Проектная деятельность ООО «РСК «АСК-Строй включает в себя разработку проектной и рабочей документации объектов гражданского и промышленного строительства, в том числе и объектов-памятников, охраняемых КГИОП, в соответствии с действующими строительными нормами и правилами</td>
-    <td class="colTexts">ООО "РСК "АСК-Строй" выполняет полный комплекс строительно-монтажных работ по усилению, реконструкции, реставрации и новому строительству промышленных, гражданских сооружений</td>
-    <td class="colTexts">Комплекс работ по обследованию включает в себя следующие этапы: анализ исходных данных, визуальное обследование, инструментальное обследование, обработка результатов обследования</td>
+<table class="addTextTable" width="auto" cellpadding="0" cellspacing="0">
+  <tr class="addTextRow">
+    <td class="addTextCol">
+      <div class="colTextCont">
+        <p class="colHead">Проектирование</p>
+        <p class="colText">Проектная деятельность ООО «РСК «АСК-Строй включает в себя разработку проектной и рабочей документации объектов гражданского и промышленного строительства, в том числе и объектов-памятников, охраняемых КГИОП, в соответствии с действующими строительными нормами и правилами</p>
+      </div>
+    </td>
+    <td class="addTextCol">
+      <div class="colTextCont">
+        <p class="colHead">Строительство</p>
+        <p class="colText">ООО "РСК "АСК-Строй" выполняет полный комплекс строительно-монтажных работ по усилению, реконструкции, реставрации и новому строительству промышленных, гражданских сооружений</p>
+      </div>
+    </td>
+    <td class="addTextCol">
+      <div class="colTextCont">
+        <p class="colHead">Обследование</p>
+        <p class="colText">Комплекс работ по обследованию включает в себя следующие этапы: анализ исходных данных, визуальное обследование, инструментальное обследование, обработка результатов обследования</p>
+      </div>
+    </td>
   </tr>
 </table>
 
