--- a/index.html
+++ b/index.html
@@ -35,20 +35,26 @@
   <tr class="addTextRow">
     <td class="addTextCol">
       <div class="colTextCont">
-        <p class="colHead">Проектирование</p>
-        <p class="colText">Проектная деятельность ООО «РСК «АСК-Строй включает в себя разработку проектной и рабочей документации объектов гражданского и промышленного строительства, в том числе и объектов-памятников, охраняемых КГИОП, в соответствии с действующими строительными нормами и правилами</p>
+        <p class="colHead" style="margin: 20px 0 20px 25px;">Проектирование</p>
+        <div class="divColText" style="margin-left: 25px;">
+          <p class="colText">Проектная деятельность ООО «РСК «АСК-Строй» включает в себя разработку проектной и рабочей документации объектов гражданского и промышленного строительства, в том числе и объектов-памятников, охраняемых КГИОП, в соответствии с действующими строительными нормами и правилами.</p>
+        </div>
       </div>
     </td>
     <td class="addTextCol">
       <div class="colTextCont">
-        <p class="colHead">Строительство</p>
-        <p class="colText">ООО "РСК "АСК-Строй" выполняет полный комплекс строительно-монтажных работ по усилению, реконструкции, реставрации и новому строительству промышленных, гражданских сооружений</p>
+        <p class="colHead" style="margin: 20px 25px 20px 25px;">Строительство</p>
+        <div class="divColText" style="margin: 0 25px 0 25px;">
+          <p class="colText">ООО «РСК «АСК-Строй» выполняет полный комплекс строительно-монтажных работ по усилению, реконструкции, реставрации и новому строительству промышленных, гражданских сооружений.</p>
+        </div>
       </div>
     </td>
     <td class="addTextCol">
       <div class="colTextCont">
-        <p class="colHead">Обследование</p>
-        <p class="colText">Комплекс работ по обследованию включает в себя следующие этапы: анализ исходных данных, визуальное обследование, инструментальное обследование, обработка результатов обследования</p>
+        <p class="colHead" style="margin: 20px 25px 20px 0;">Обследование</p>
+        <div class="divColText" style="margin-right: 25px;">
+          <p class="colText">Комплекс работ по обследованию включает в себя следующие этапы: анализ исходных данных, визуальное обследование, инструментальное обследование, обработка результатов обследования.</p>
+        </div>
       </div>
     </td>
   </tr>
