--- a/index.html
+++ b/index.html
@@ -18,16 +18,20 @@
       <a>email</a>
     </div>
     <div class="heading-primary-sub">
-      <a href="index.html">Главная</a>
-      <a href="activity.html">Деятельность</a>
+      <a class="headButtons" href="index.html">Главная</a>
+      <a class="headButtons" href="activity.html">Деятельность</a>
       <a>Лицензии</a>
     </div>
 </header>
 
 <div class="main">
   <div class="mainCont">
-    <p class="mainTextHead">ООО «РСК «АСК-Строй»</p>
-    <p class="mainText">выполняет полный комплекс работ нулевого цикла, реконструкции, реставрации и капитальному ремонту жилых, административных и производственных зданий и сооружений. Предоставляет широкий спектр инжиниринговых услуг по обследованию, проектированию и выполнению строительно-монтажных работ.</p>
+    <div>
+      <p class="mainTextHead">ООО «РСК «АСК-Строй»</p>
+    </div>
+    <div>
+      <p class="mainText">выполняет полный комплекс работ нулевого цикла, реконструкции, реставрации и капитальному ремонту жилых, административных и производственных зданий и сооружений. Предоставляет широкий спектр инжиниринговых услуг по обследованию, проектированию и выполнению строительно-монтажных работ.</p>
+    </div>
   </div>
 </div>
 
