--- a/activity.html
+++ b/activity.html
@@ -18,8 +18,8 @@
       <a>email</a>
     </div>
     <div class="heading-primary-sub">
-      <a href="index.html">Главная</a>
-      <a href="activity.html">Деятельность</a>
+      <a class="headButtons" href="index.html">Главная</a>
+      <a class="headButtons" href="activity.html">Деятельность</a>
       <a>Лицензии</a>
     </div>
 </header>
