--- a/index.html
+++ b/index.html
@@ -11,16 +11,22 @@
 <body>
 <header class="header">
     <div class="logobox">
-        <!-- <img src="logo.jpg" alt="Logo" class="logo"> -->
+        <img src="logo.png" alt="Logo" class="logo">
+        <div class="logoText">
+          <p class="logoTextTop">реставрационно-строительная компания</p>
+          <p class="logoTextBot">АСК-Строй</p>
+        </div>
     </div>
-    <div class="heading-primary-main">
-      <a>(812) 626-65-98</a>
-      <a>email</a>
-    </div>
-    <div class="heading-primary-sub">
-      <a class="headButtons" href="index.html">Главная</a>
-      <a class="headButtons" href="activity.html">Деятельность</a>
-      <a>Лицензии</a>
+    <div class="header-primary">
+      <div class="heading-primary-main">
+        <a>(812) 626-65-98</a>
+        <a>email</a>
+      </div>
+      <div class="heading-primary-sub">
+        <a class="headButtons" href="index.html">Главная</a>
+        <a class="headButtons" href="activity.html">Деятельность</a>
+        <a>Лицензии</a>
+      </div>
     </div>
 </header>
 
