--- a/activity.html
+++ b/activity.html
@@ -5,17 +5,13 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <title>Реставрационно-строительная компания АСК-Строй</title>
+    <title>АСК-Строй</title>
 </head>
 
 <body>
 <header class="header">
     <div class="logobox">
         <img src="logo.png" alt="Logo" class="logo">
-        <div class="logoText">
-          <p class="logoTextTop">реставрационно-строительная компания</p>
-          <p class="logoTextBot">АСК-Строй</p>
-        </div>
     </div>
     <div class="header-primary">
       <div class="heading-primary-main">
