--- a/activity.html
+++ b/activity.html
@@ -15,34 +15,36 @@
     </div>
     <div class="header-primary">
       <div class="heading-primary-main">
-        <a>(812) 626-65-98</a>
+        <a style="margin-right: 40px;">(812) 626-65-98</a>
         <a>email</a>
       </div>
       <div class="heading-primary-sub">
         <a class="headButtons" href="index.html">Главная</a>
-        <a class="headButtons" href="activity.html">Деятельность</a>
+        <a class="headButtons" href="activity.html" style="margin: 0 40px 0 40px;">Деятельность</a>
         <a>Лицензии</a>
       </div>
     </div>
 </header>
 
-<div class="main" style="height: 90vh;">
+<div class="main" style="height: 80vh;">
   <div class="activityList">
     <div class="ALCont">
-      <a href="1.html" class="btn ALBlock">Ремонтно-восстановительные работы по усилению кирпичной кладки стены здания в зоне лестницы по адресу: г. Санкт-Петербург, Московский пр.140, к.2</a>
+      <a href="1.html" class="ALBlock" target="_blank">Ремонтно-восстановительные работы по усилению кирпичной кладки стены здания в зоне лестницы по адресу: г. Санкт-Петербург, Московский пр.140, к.2</a>
     </div>
     <div class="ALCont">
-      <a href="2.html" class="btn ALBlock">Строительно-монтажные работы по устройству лестницы при ремонте административно-бытового здания с перепланировкой помещения по адресу: г. Санкт-Петербург, Железнодорожный пр., д. 40, </a>
+      <a href="2.html" class="ALBlock" target="_blank">Строительно-монтажные работы по устройству лестницы при ремонте административно-бытового здания с перепланировкой помещения по адресу: г. Санкт-Петербург, Железнодорожный пр., д. 40, </a>
     </div>
     <div class="ALCont">
-      <a href="3.html" class="btn ALBlock">Комплекс работ по устройству шпунтового ограждения на объекте по адресу: Ленинградская область, Выборгский район, пос. Ильичево, ул. Солнечная, дом. 15</a>
+      <a href="3.html" class="ALBlock" target="_blank">Комплекс работ по устройству шпунтового ограждения на объекте по адресу: Ленинградская область, Выборгский район, пос. Ильичево, ул. Солнечная, дом. 15</a>
     </div>
     <div class="ALCont">
-      <a href="4.html" class="btn ALBlock">Усиление кирпичной кладки стен здания по адресу: г. Санкт-Петербург, ул. Чернышевского, д.18</a>
+      <a href="4.html" class="ALBlock" target="_blank">Усиление кирпичной кладки стен здания по адресу: г. Санкт-Петербург, ул. Чернышевского, д.18</a>
     </div>
     </div>
   </div>
 </div>
+
+<div class="header"></div>
 
 </body>
 </html>
