--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 <header class="header">
     <div class="logobox">
         <img src="logo.png" alt="Logo" class="logo">
+
     </div>
     <div class="header-primary">
       <div class="heading-primary-main">
-        <a>(812) 626-65-98</a>
+        <a style="margin-right: 40px;">(812) 626-65-98</a>
         <a>email</a>
       </div>
       <div class="heading-primary-sub">
         <a class="headButtons" href="index.html">Главная</a>
-        <a class="headButtons" href="activity.html">Деятельность</a>
+        <a class="headButtons" href="activity.html" style="margin: 0 40px 0 40px;">Деятельность</a>
         <a>Лицензии</a>
       </div>
     </div>
@@ -41,24 +42,24 @@
   <tr class="addTextRow">
     <td class="addTextCol">
       <div class="colTextCont">
-        <p class="colHead" style="margin: 20px 0 20px 25px;">Проектирование</p>
-        <div class="divColText" style="margin-left: 25px;">
-          <p class="colText">Проектная деятельность ООО «РСК «АСК-Строй» включает в себя разработку проектной и рабочей документации объектов гражданского и промышленного строительства, в том числе и объектов-памятников, охраняемых КГИОП, в соответствии с действующими строительными нормами и правилами.</p>
-        </div>
-      </div>
-    </td>
-    <td class="addTextCol">
-      <div class="colTextCont">
-        <p class="colHead" style="margin: 20px 25px 20px 25px;">Строительство</p>
-        <div class="divColText" style="margin: 0 25px 0 25px;">
+        <p class="colHead"><b>Строительство</b></p>
+        <div class="divColText">
           <p class="colText">ООО «РСК «АСК-Строй» выполняет полный комплекс строительно-монтажных работ по усилению, реконструкции, реставрации и новому строительству промышленных, гражданских сооружений.</p>
         </div>
       </div>
     </td>
     <td class="addTextCol">
       <div class="colTextCont">
-        <p class="colHead" style="margin: 20px 25px 20px 0;">Обследование</p>
-        <div class="divColText" style="margin-right: 25px;">
+        <p class="colHead"><b>Проектирование</b></p>
+        <div class="divColText" style="  border-left: 2px solid #b0b0b0; border-right: 2px solid #b0b0b0; padding: 0 25px 0 25px; margin: 0;">
+          <p class="colText">Проектная деятельность ООО «РСК «АСК-Строй» включает в себя разработку проектной и рабочей документации объектов гражданского и промышленного строительства, в том числе и объектов-памятников, охраняемых КГИОП, в соответствии с действующими строительными нормами и правилами.</p>
+        </div>
+      </div>
+    </td>
+    <td class="addTextCol">
+      <div class="colTextCont">
+        <p class="colHead"><b>Обследование</b></p>
+        <div class="divColText">
           <p class="colText">Комплекс работ по обследованию включает в себя следующие этапы: анализ исходных данных, визуальное обследование, инструментальное обследование, обработка результатов обследования.</p>
         </div>
       </div>
