--- a/activity.html
+++ b/activity.html
@@ -11,7 +11,7 @@
 <body>
 <header class="header">
     <div class="logobox">
-        <img src="logo.png" alt="Logo" class="logo">
+        <img src="logo.jpg" alt="Logo" class="logo">
     </div>
     <div class="header-primary">
       <div class="heading-primary-main">
