--- a/3.html
+++ b/3.html
@@ -10,77 +10,87 @@
 
 <body>
 <header class="header">
-    <div class="logobox">
-        <img src="logo.png" alt="Logo" class="logo">
+  <div class="logobox">
+      <img src="logo.jpg" alt="Logo" class="logo">
+  </div>
+  <div class="header-primary">
+    <div class="heading-primary-main">
+      <a style="margin-right: 40px;">(812) 626-65-98</a>
+      <a>email</a>
     </div>
-    <div class="header-primary">
-      <div class="heading-primary-main">
-        <a>(812) 626-65-98</a>
-        <a>email</a>
-      </div>
-      <div class="heading-primary-sub">
-        <a class="headButtons" href="index.html">Главная</a>
-        <a class="headButtons" href="activity.html">Деятельность</a>
-        <a>Лицензии</a>
-      </div>
+    <div class="heading-primary-sub">
+      <a class="headButtons" href="index.html">Главная</a>
+      <a class="headButtons" href="activity.html" style="margin: 0 40px 0 40px;">Деятельность</a>
+      <a>Лицензии</a>
     </div>
+  </div>
 </header>
 
-<div class="slideshow-container">
+<div class="main" style="height: 80vh;">
+  <div class="activCont">
+    <div class="slideshow-container">
 
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
-    <div class="mySlides fade">
-      <div class="imgCont">
-        <img class="img" src="./SL15/1.jpg">
+        <div class="mySlides fade">
+          <div class="imgCont">
+            <img class="img" src="./SL15/1.jpg">
+          </div>
+        </div>
+        <div class="mySlides fade">
+          <div class="imgCont">
+            <img class="img" src="./SL15/2.jpg">
+          </div>
+        </div>
+        <div class="mySlides fade">
+          <div class="imgCont">
+            <img class="img" src="./SL15/3.jpg">
+          </div>
+        </div>
+        <div class="mySlides fade">
+          <div class="imgCont">
+            <img class="img" src="./SL15/4.jpg">
+          </div>
+        </div>
+        <div class="mySlides fade">
+          <div class="imgCont">
+            <img class="img" src="./SL15/5.jpg">
+          </div>
+        </div>
+        <div class="mySlides fade">
+          <div class="imgCont">
+            <img class="img" src="./SL15/6.jpg">
+          </div>
+        </div>
+
+        <div class="dotCont">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
+        </div>
       </div>
-      <div class="text">Ремонтно-восстановительные работы по усилению кирпичной кладки стены здания в зоне лестницы по адресу: г. Санкт-Петербург, Московский пр.140, к.2</div>
-    </div>
-
-    <div class="mySlides fade">
-      <div class="imgCont">
-        <img class="img" src="./SL15/2.jpg">
+      <div class="activityList">
+        <div class="ALCont">
+          <a href="1.html" class="ALBlock">Ремонтно-восстановительные работы по усилению кирпичной кладки стены здания в зоне лестницы по адресу: г. Санкт-Петербург, Московский пр.140, к.2</a>
+        </div>
+        <div class="ALCont">
+          <a href="2.html" class="ALBlock">Строительно-монтажные работы по устройству лестницы при ремонте административно-бытового здания с перепланировкой помещения по адресу: г. Санкт-Петербург, Железнодорожный пр., д. 40, </a>
+        </div>
+        <div class="ALCont">
+          <a href="3.html" class="ALBlock">Комплекс работ по устройству шпунтового ограждения на объекте по адресу: Ленинградская область, Выборгский район, пос. Ильичево, ул. Солнечная, дом. 15</a>
+        </div>
+        <div class="ALCont">
+          <a href="4.html" class="ALBlock">Усиление кирпичной кладки стен здания по адресу: г. Санкт-Петербург, ул. Чернышевского, д.18</a>
+        </div>
       </div>
-      <div class="text">Строительно-монтажные работы по устройству лестницы при ремонте административно-бытового здания с перепланировкой помещения по адресу: г. Санкт-Петербург, Железнодорожный пр., д. 40, лит В</div>
     </div>
-
-    <div class="mySlides fade">
-      <div class="imgCont">
-        <img class="img" src="./SL15/3.jpg">
-      </div>
-      <div class="text">Комплекс работ по устройству шпунтового ограждения на объекте по адресу: Ленинградская область, Выборгский район, пос. Ильичево, ул. Солнечная, дом. 15</div>
-    </div>
-
-    <div class="mySlides fade">
-      <div class="imgCont">
-        <img class="img" src="./SL15/4.jpg">
-      </div>
-      <div class="text">Строительно-монтажные работы по устройству лестницы при ремонте административно-бытового здания с перепланировкой помещения по адресу: г. Санкт-Петербург, Железнодорожный пр., д. 40, лит В</div>
-    </div>
-
-    <div class="mySlides fade">
-      <div class="imgCont">
-        <img class="img" src="./SL15/5.jpg">
-      </div>
-      <div class="text">Строительно-монтажные работы по устройству лестницы при ремонте административно-бытового здания с перепланировкой помещения по адресу: г. Санкт-Петербург, Железнодорожный пр., д. 40, лит В</div>
-    </div>
-
-    <div class="mySlides fade">
-      <div class="imgCont">
-        <img class="img" src="./SL15/6.jpg">
-      </div>
-      <div class="text">Строительно-монтажные работы по устройству лестницы при ремонте административно-бытового здания с перепланировкой помещения по адресу: г. Санкт-Петербург, Железнодорожный пр., д. 40, лит В</div>
-    </div>
-
-    <div class="dotCont">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-    </div>
-
-
 </div>
+
+<div class="header"></div>
 
 <script>
 var slideIndex = 1;
