--- a/activity.html
+++ b/activity.html
@@ -29,16 +29,16 @@
 <div class="main" style="height: 80vh;">
   <div class="activityList">
     <div class="ALCont">
-      <a href="1.html" class="ALBlock" target="_blank">Ремонтно-восстановительные работы по усилению кирпичной кладки стены здания в зоне лестницы по адресу: г. Санкт-Петербург, Московский пр.140, к.2</a>
+      <a href="1.html" class="ALBlock">Ремонтно-восстановительные работы по усилению кирпичной кладки стены здания в зоне лестницы по адресу: г. Санкт-Петербург, Московский пр.140, к.2</a>
     </div>
     <div class="ALCont">
-      <a href="2.html" class="ALBlock" target="_blank">Строительно-монтажные работы по устройству лестницы при ремонте административно-бытового здания с перепланировкой помещения по адресу: г. Санкт-Петербург, Железнодорожный пр., д. 40, </a>
+      <a href="2.html" class="ALBlock">Строительно-монтажные работы по устройству лестницы при ремонте административно-бытового здания с перепланировкой помещения по адресу: г. Санкт-Петербург, Железнодорожный пр., д. 40, </a>
     </div>
     <div class="ALCont">
-      <a href="3.html" class="ALBlock" target="_blank">Комплекс работ по устройству шпунтового ограждения на объекте по адресу: Ленинградская область, Выборгский район, пос. Ильичево, ул. Солнечная, дом. 15</a>
+      <a href="3.html" class="ALBlock">Комплекс работ по устройству шпунтового ограждения на объекте по адресу: Ленинградская область, Выборгский район, пос. Ильичево, ул. Солнечная, дом. 15</a>
     </div>
     <div class="ALCont">
-      <a href="4.html" class="ALBlock" target="_blank">Усиление кирпичной кладки стен здания по адресу: г. Санкт-Петербург, ул. Чернышевского, д.18</a>
+      <a href="4.html" class="ALBlock">Усиление кирпичной кладки стен здания по адресу: г. Санкт-Петербург, ул. Чернышевского, д.18</a>
     </div>
     </div>
   </div>
