--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <tr class="addTextRow">
     <td class="addTextCol">
       <div class="colTextCont">
-        <p class="colHead"><b>Строительство</b></p>
+        <p class="colHead">Строительство</p>
         <div class="divColText">
           <p class="colText">ООО «РСК «АСК-Строй» выполняет полный комплекс строительно-монтажных работ по усилению, реконструкции, реставрации и новому строительству промышленных, гражданских сооружений.</p>
         </div>
@@ -50,7 +50,7 @@
     </td>
     <td class="addTextCol">
       <div class="colTextCont">
-        <p class="colHead"><b>Проектирование</b></p>
+        <p class="colHead">Проектирование</p>
         <div class="divColText" style="  border-left: 2px solid #b0b0b0; border-right: 2px solid #b0b0b0; padding: 0 25px 0 25px; margin: 0;">
           <p class="colText">Проектная деятельность ООО «РСК «АСК-Строй» включает в себя разработку проектной и рабочей документации объектов гражданского и промышленного строительства, в том числе и объектов-памятников, охраняемых КГИОП, в соответствии с действующими строительными нормами и правилами.</p>
         </div>
@@ -58,7 +58,7 @@
     </td>
     <td class="addTextCol">
       <div class="colTextCont">
-        <p class="colHead"><b>Обследование</b></p>
+        <p class="colHead">Обследование</p>
         <div class="divColText">
           <p class="colText">Комплекс работ по обследованию включает в себя следующие этапы: анализ исходных данных, визуальное обследование, инструментальное обследование, обработка результатов обследования.</p>
         </div>
