--- a/2.html
+++ b/2.html
@@ -21,7 +21,7 @@
       <div class="heading-primary-sub">
         <a class="headButtons" href="index.html">Главная</a>
         <a class="headButtons" href="activity.html" style="margin: 0 40px 0 40px;">Деятельность</a>
-        <a>Лицензии</a>
+        <a class="headButtons" href="licens.html">Лицензии</a>
       </div>
     </div>
   </header>
