--- a/2.html
+++ b/2.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
-    <title>Реставрационно-строительная компания АСК-Строй</title>
+  <title>Реставрационно-строительная компания АСК-Строй</title>
 </head>
 
 <body>
-<header class="header">
+  <header class="header">
     <div class="logobox">
-        <img src="logo.jpg" alt="Logo" class="logo">
+      <img src="logo.jpg" alt="Logo" class="logo">
     </div>
     <div class="header-primary">
       <div class="heading-primary-main">
@@ -30,71 +30,71 @@
     <div class="activCont">
       <div class="slideshow-container">
 
-          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
-          <div class="mySlides fade">
-            <div class="imgCont">
-              <img class="img" src="./JD40/JD1.jpg">
-            </div>
-          </div>
-          <div class="mySlides fade">
-            <div class="imgCont">
-              <img class="img" src="./JD40/JD2.jpg">
-            </div>
-          </div>
-
-          <div class="dotCont">
-              <span class="dot" onclick="currentSlide(1)"></span>
-              <span class="dot" onclick="currentSlide(2)"></span>
+        <div class="mySlides fade">
+          <div class="imgCont">
+            <img class="img" src="./JD40/JD1.jpg">
           </div>
         </div>
-        <div class="activityList">
-          <div class="ALCont">
-            <a href="1.html" class="ALBlock">Ремонтно-восстановительные работы по усилению кирпичной кладки стены здания в зоне лестницы по адресу: г. Санкт-Петербург, Московский пр.140, к.2</a>
+        <div class="mySlides fade">
+          <div class="imgCont">
+            <img class="img" src="./JD40/JD2.jpg">
           </div>
-          <div class="ALCont">
-            <a href="2.html" class="ALBlock">Строительно-монтажные работы по устройству лестницы при ремонте административно-бытового здания с перепланировкой помещения по адресу: г. Санкт-Петербург, Железнодорожный пр., д. 40, </a>
-          </div>
-          <div class="ALCont">
-            <a href="3.html" class="ALBlock">Комплекс работ по устройству шпунтового ограждения на объекте по адресу: Ленинградская область, Выборгский район, пос. Ильичево, ул. Солнечная, дом. 15</a>
-          </div>
-          <div class="ALCont">
-            <a href="4.html" class="ALBlock">Усиление кирпичной кладки стен здания по адресу: г. Санкт-Петербург, ул. Чернышевского, д.18</a>
-          </div>
+        </div>
+
+        <div class="dotCont">
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
         </div>
       </div>
+      <div class="INFOList">
+        <div class="ALCont">
+          <a href="1.html" class="INFOALBlock">Ремонтно-восстановительные работы по усилению кирпичной кладки стены здания в зоне лестницы по адресу: г. Санкт-Петербург, Московский пр.140, к.2</a>
+        </div>
+        <div class="ALCont">
+          <a href="2.html" class="INFOALBlock">Строительно-монтажные работы по устройству лестницы при ремонте административно-бытового здания с перепланировкой помещения по адресу: г. Санкт-Петербург, Железнодорожный пр., д. 40, </a>
+        </div>
+        <div class="ALCont">
+          <a href="3.html" class="INFOALBlock">Комплекс работ по устройству шпунтового ограждения на объекте по адресу: Ленинградская область, Выборгский район, пос. Ильичево, ул. Солнечная, дом. 15</a>
+        </div>
+        <div class="ALCont">
+          <a href="4.html" class="INFOALBlock">Усиление кирпичной кладки стен здания по адресу: г. Санкт-Петербург, ул. Чернышевского, д.18</a>
+        </div>
+      </div>
+    </div>
   </div>
 
-<div class="header"></div>
+  <div class="header"></div>
 
-<script>
-var slideIndex = 1;
-showSlides(slideIndex);
+  <script>
+  var slideIndex = 1;
+  showSlides(slideIndex);
 
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
+  function plusSlides(n) {
+    showSlides(slideIndex += n);
+  }
 
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
+  function currentSlide(n) {
+    showSlides(slideIndex = n);
+  }
 
-function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
+  function showSlides(n) {
+    var i;
+    var slides = document.getElementsByClassName("mySlides");
+    var dots = document.getElementsByClassName("dot");
+    if (n > slides.length) {slideIndex = 1}
+    if (n < 1) {slideIndex = slides.length}
+    for (i = 0; i < slides.length; i++) {
       slides[i].style.display = "none";
-  }
-  for (i = 0; i < dots.length; i++) {
+    }
+    for (i = 0; i < dots.length; i++) {
       dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex-1].style.display = "block";
+    dots[slideIndex-1].className += " active";
   }
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
-}
 </script>
 
 </body>
